# log4cplus-case

./: .gitignore  CMakeLists.txt
lib/: log4cplusU.lib  log4cplusUD.lib
resources/: log4cplus.properties
src/application/: CMakeLists.txt  main.cpp
src/application/core/: qsplogger.cpp  qsplogger.h
